--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ server.port=9191
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=bainanaresh@gmail.com
-spring.mail.password=9490457234
+spring.mail.password=enter password
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
